samples/_failures_safe/1761128174_ae7ec5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84542c29.c: In function ‘main’:
./samples/SAFE/__tmp_84542c29.c:159:30: error: ‘get’ undeclared (first use in this function); did you mean ‘getc’?
  159 |         struct Token token = get
      |                              ^~~
      |                              getc
./samples/SAFE/__tmp_84542c29.c:159:30: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_84542c29.c:159:16: error: expected ‘,’ or ‘;’ at end of input
  159 |         struct Token token = get
      |                ^~~~~
./samples/SAFE/__tmp_84542c29.c:159:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_84542c29.c:159:16: error: expected declaration or statement at end of input
